--- a/src/MExplorer/MExplorer.csproj
+++ b/src/MExplorer/MExplorer.csproj
@@ -18,4 +18,9 @@
     <PackageReference Include="Microsoft.ProjectReunion.WinUI" Version="0.8.4" />
     <Manifest Include="$(ApplicationManifest)" />
   </ItemGroup>
+
+
+  <ItemGroup>
+    <None Include="..\..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
 </Project>
