Moved ColorMap class from ImageBuilder project to the FSTypes project. Moved the CountsRepoReader from the MFile project to the ImageBuilder project

--- a/src/MClient/MClient.csproj
+++ b/src/MClient/MClient.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CountsRepo\CountsRepo.csproj" />
     <ProjectReference Include="..\MFile\MFile.csproj" />
     <ProjectReference Include="..\MqMessages\MqMessages.csproj" />
   </ItemGroup>
