--- a/src/MFile/MFile.csproj
+++ b/src/MFile/MFile.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CountsRepo\CountsRepo.csproj" />
+    <ProjectReference Include="..\FSTypes\FSTypes.csproj" />
   </ItemGroup>
 
 </Project>
