--- a/src/MClient/MClient.csproj
+++ b/src/MClient/MClient.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -18,7 +18,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CountsRepo\CountsRepo.csproj" />
-    <ProjectReference Include="..\MFile\MFile.csproj" />
     <ProjectReference Include="..\MqMessages\MqMessages.csproj" />
   </ItemGroup>
 
