Created project: MapSectionRepo and moved the CountsRepoReader class into it. Renamed project CountsRepo to FileDictionaryLib.

--- a/src/MClient/MClient.csproj
+++ b/src/MClient/MClient.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CountsRepo\CountsRepo.csproj" />
+    <ProjectReference Include="..\MapSectionRepo\MapSectionRepo.csproj" />
     <ProjectReference Include="..\MqMessages\MqMessages.csproj" />
   </ItemGroup>
 
