--- a/src/ImageBuilder/ImageBuilder.csproj
+++ b/src/ImageBuilder/ImageBuilder.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CountsRepo\CountsRepo.csproj" />
+    <ProjectReference Include="..\MapSectionRepo\MapSectionRepo.csproj" />
     <ProjectReference Include="..\MFile\MFile.csproj" />
     <ProjectReference Include="..\PngImageLib\PngImageLib.csproj" />
   </ItemGroup>
