Created class MFileReconstructor used to write new MFile from hand-written code that declares the contents of a old .JSON project description file. Moved IPartsBin and the PartDetail class from the FSTypes project to the FileDictionaryLib project. Moved the PointInt, SizeInt and RectangleInt classes from MQMessages to FSTypes

--- a/src/FSTypes/FSTypes.csproj
+++ b/src/FSTypes/FSTypes.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Screen\CanvasSize.cs" />
+    <Compile Remove="Screen\Point.cs" />
+  </ItemGroup>
+
 </Project>
