--- a/src/ProjectRepo/ProjectRepo.csproj
+++ b/src/ProjectRepo/ProjectRepo.csproj
@@ -1,12 +1,15 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MongoDB.Driver" Version="2.13.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\FSTypes\FSTypes.csproj" />
-    <ProjectReference Include="..\MFile\MFile.csproj" />
   </ItemGroup>
 
 </Project>
