Updated the ColorMapEntry and ColorMapColor classes to support JSON serialization and deleted the ColorMapEntry class in the MFile project.

--- a/src/FSTypes/FSTypes.csproj
+++ b/src/FSTypes/FSTypes.csproj
@@ -9,4 +9,8 @@
     <Compile Remove="Screen\Point.cs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MongoDB.Bson" Version="2.13.2" />
+  </ItemGroup>
+
 </Project>
