--- a/src/MFile/MFile.csproj
+++ b/src/MFile/MFile.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="ColorMapEntry.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\FSTypes\FSTypes.csproj" />
   </ItemGroup>
 
