--- a/src/FileDictionaryLib/FileDictionaryLib.csproj
+++ b/src/FileDictionaryLib/FileDictionaryLib.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FSTypes\FSTypes.csproj" />
+    <ProjectReference Include="..\MSS.Common\MSS.Common.csproj" />
   </ItemGroup>
 
 </Project>
