--- a/src/MqMessages/MqMessages.csproj
+++ b/src/MqMessages/MqMessages.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FSTypes\FSTypes.csproj" />
+    <ProjectReference Include="..\MSS.Types\MSS.Types.csproj" />
   </ItemGroup>
 
 </Project>
