--- a/src/ProjectRepo/ProjectRepo.csproj
+++ b/src/ProjectRepo/ProjectRepo.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FSTypes\FSTypes.csproj" />
+    <ProjectReference Include="..\MSS.Types\MSS.Types.csproj" />
   </ItemGroup>
 
 </Project>
