Rewrote the Coords class as a Record that takes the string representation of each coordinate and an array of doubles. The array of doubles must contains a multiple of 4 elements.

--- a/src/RussianBoxes/RussianBoxes.csproj
+++ b/src/RussianBoxes/RussianBoxes.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\MSetDatabaseClient\MSetDatabaseClient.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\" />
+  </ItemGroup>
+
 </Project>
