Created RMapHelper class and Point, Size and Rectangle classes for double and base-2 rationals.

--- a/src/MSS.Types/MSS.Types.csproj
+++ b/src/MSS.Types/MSS.Types.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Map\Coords_old.cs" />
     <Compile Remove="Screen\CanvasSize.cs" />
     <Compile Remove="Screen\Point.cs" />
   </ItemGroup>
