Renamed the MSetDatabaseClient project, MSetRepo. Created class: MapSectionAdapter and moved into it all of the MongoDb repository access logic out of the MongoDbImporter. Move the MongoDbImporter class to the ImageBuilder project. Split out the unused BigIntegerSerializer class and moved it to the z_NotUsed folder.

--- a/src/ImageBuilder/ImageBuilder.csproj
+++ b/src/ImageBuilder/ImageBuilder.csproj
@@ -18,8 +18,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MapSectionRepo\MapSectionRepo.csproj" />
-    <ProjectReference Include="..\MSetDatabaseClient\MSetDatabaseClient.csproj" />
     <ProjectReference Include="..\MSetInfoRepo\MSetInfoRepo.csproj" />
+    <ProjectReference Include="..\MSetRepo\MSetRepo.csproj" />
     <ProjectReference Include="..\MSS.Common\MSS.Common.csproj" />
     <ProjectReference Include="..\PngImageLib\PngImageLib.csproj" />
   </ItemGroup>
