--- a/src/ImageBuilder/ImageBuilder.csproj
+++ b/src/ImageBuilder/ImageBuilder.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MapSectionRepo\MapSectionRepo.csproj" />
+    <ProjectReference Include="..\MEngineClient\MEngineClient.csproj" />
     <ProjectReference Include="..\MSetInfoRepo\MSetInfoRepo.csproj" />
     <ProjectReference Include="..\MSetRepo\MSetRepo.csproj" />
     <ProjectReference Include="..\MSS.Common\MSS.Common.csproj" />
