--- a/src/MSS.Types/MSS.Types.csproj
+++ b/src/MSS.Types/MSS.Types.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="MongoDB.Bson" Version="2.13.2" />
+    <PackageReference Include="protobuf-net.Grpc" Version="1.0.152" />
   </ItemGroup>
 
 </Project>
