--- a/src_FGEN/TestQdDotNet/TestQdDotNet.csproj
+++ b/src_FGEN/TestQdDotNet/TestQdDotNet.csproj
@@ -9,6 +9,7 @@
     <RootNamespace>TestQdDotNet</RootNamespace>
     <AssemblyName>TestQdDotNet</AssemblyName>
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
+    <LangVersion>8.0</LangVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
