--- a/src_FGEN/MEngineService/MEngineService.csproj
+++ b/src_FGEN/MEngineService/MEngineService.csproj
@@ -3,9 +3,15 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <StartupObject>MEngineService.Program</StartupObject>
+    <Platforms>AnyCPU;x64</Platforms>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <PlatformTarget>x64</PlatformTarget>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
@@ -16,7 +22,13 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\MEngineDataContracts\MEngineDataContracts.csproj" />
-    <ProjectReference Include="..\qdDotNet\qdDotNet.vcxproj" />
+    <ProjectReference Include="..\..\src\MSS.Common\MSS.Common.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="qdDotNet">
+      <HintPath>..\..\x64\Debug\qdDotNet.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
