Renamed the ClrClassLib project: MSetGeneratorClr

--- a/src_FGEN/MSetGeneratorClr/MSetGeneratorClr.vcxproj.filters
+++ b/src_FGEN/MSetGeneratorClr/MSetGeneratorClr.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ClrClassLib.h">
+    <ClInclude Include="MSetGenerator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Resource.h">
@@ -35,7 +35,7 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="ClrClassLib.cpp">
+    <ClCompile Include="MSetGenerator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="AssemblyInfo.cpp">
