--- a/src_FGEN/QdDotNetConsoleTest/QdDotNetConsoleTest.csproj
+++ b/src_FGEN/QdDotNetConsoleTest/QdDotNetConsoleTest.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ClrClassLib\ClrClassLib.vcxproj" />
+    <ProjectReference Include="..\MSetGeneratorClr\MSetGeneratorClr.vcxproj" />
   </ItemGroup>
 
 </Project>
