--- a/src_FGEN/MSetGeneratorClr/MSetGeneratorClr.vcxproj
+++ b/src_FGEN/MSetGeneratorClr/MSetGeneratorClr.vcxproj
@@ -121,7 +121,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="ClrClassLib.h" />
+    <ClInclude Include="MSetGenerator.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="PointInt.h" />
     <ClInclude Include="RectangleInt.h" />
@@ -130,7 +130,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp" />
-    <ClCompile Include="ClrClassLib.cpp" />
+    <ClCompile Include="MSetGenerator.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
