--- a/src_FGEN/QdDotNetConsoleTest/QdDotNetConsoleTest.csproj
+++ b/src_FGEN/QdDotNetConsoleTest/QdDotNetConsoleTest.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MSetGeneratorClr\MSetGeneratorClr.vcxproj" />
+    <ProjectReference Include="..\MSetGenerator\MSetGenerator.vcxproj" />
   </ItemGroup>
 
 </Project>
