The C# project is now working as it calls Mixed assembly:  MSetGeneratorClr with managed class: MSetGenClrTest2

--- a/src_FGEN/MSetGenerator/MSetGenerator.vcxproj.filters
+++ b/src_FGEN/MSetGenerator/MSetGenerator.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="ddBridge.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MSetGenTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="MSetGenerator.def">
@@ -65,6 +68,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ddBridge.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MSetGenTest.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
