--- a/src_FGEN/QdDotNetConsoleTest/QdDotNetConsoleTest.csproj
+++ b/src_FGEN/QdDotNetConsoleTest/QdDotNetConsoleTest.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
-    <Platforms>AnyCPU;x64</Platforms>
+    <Platforms>x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,7 +16,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MSetGeneratorClr\MSetGeneratorClr.vcxproj" />
-    <ProjectReference Include="..\MSetGenerator\MSetGenerator.vcxproj" />
   </ItemGroup>
 
 </Project>
