The MSetGeneratorClr project now contains many classes from FGen. This project contains both managed and unmanaged code.

--- a/src_FGEN/MSetGeneratorClr/MSetGeneratorClr.vcxproj
+++ b/src_FGEN/MSetGeneratorClr/MSetGeneratorClr.vcxproj
@@ -49,6 +49,7 @@
     <CLRSupport>NetCore</CLRSupport>
     <CharacterSet>Unicode</CharacterSet>
     <UseInteloneMKL>No</UseInteloneMKL>
+    <UseOfMfc>Dynamic</UseOfMfc>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
@@ -78,7 +79,7 @@
   <PropertyGroup />
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
-      <PrecompiledHeader>NotUsing</PrecompiledHeader>
+      <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -125,7 +126,13 @@
     <ClCompile Include="AssemblyInfo.cpp" />
     <ClCompile Include="Dd.cpp" />
     <ClCompile Include="MSetGenClrTest2.cpp" />
+    <ClCompile Include="pch.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
+    </ClCompile>
     <ClCompile Include="PointInt.cpp" />
+    <ClCompile Include="qp.cpp" />
+    <ClCompile Include="qpMath.cpp" />
+    <ClCompile Include="qpParser.cpp" />
     <ClCompile Include="RectangleInt.cpp" />
     <ClCompile Include="SizeInt.cpp" />
   </ItemGroup>
@@ -134,6 +141,14 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="app.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\MSetGenerator\qpParser.h" />
+    <ClInclude Include="framework.h" />
+    <ClInclude Include="pch.h" />
+    <ClInclude Include="qp.h" />
+    <ClInclude Include="qpMath.h" />
+    <ClInclude Include="targetver.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
