Fixed up qpMath, qpParser and qp classes so they have a clean dependency chain.

--- a/src_FGEN/MEngineService/MEngineService.csproj
+++ b/src_FGEN/MEngineService/MEngineService.csproj
@@ -23,6 +23,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\MEngineDataContracts\MEngineDataContracts.csproj" />
     <ProjectReference Include="..\..\src\MSS.Common\MSS.Common.csproj" />
+    <ProjectReference Include="..\MSetGeneratorClr\MSetGeneratorClr.vcxproj" />
   </ItemGroup>
 
   <ItemGroup>
