--- a/src_FGEN/QdDotNetConsoleTest/QdDotNetConsoleTest.csproj
+++ b/src_FGEN/QdDotNetConsoleTest/QdDotNetConsoleTest.csproj
@@ -14,4 +14,8 @@
     <None Include="QdTest.cs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\MSS.Types\MSS.Types.csproj" />
+  </ItemGroup>
+
 </Project>
