--- a/src_FGEN/QdDotNetConsoleTest/QdDotNetConsoleTest.csproj
+++ b/src_FGEN/QdDotNetConsoleTest/QdDotNetConsoleTest.csproj
@@ -15,6 +15,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Runtime" Version="4.3.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\MEngineDataContracts\MEngineDataContracts.csproj" />
     <ProjectReference Include="..\..\src\MSS.Types\MSS.Types.csproj" />
   </ItemGroup>
 
