Removed duplicate classed. Now the QdDotNetConsoleTest program calls the MapSectionGeneratorTester class' BasicTest method.

--- a/src_FGEN/QdDotNetConsoleTest/QdDotNetConsoleTest.csproj
+++ b/src_FGEN/QdDotNetConsoleTest/QdDotNetConsoleTest.csproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\MEngineDataContracts\MEngineDataContracts.csproj" />
     <ProjectReference Include="..\..\src\MSS.Types\MSS.Types.csproj" />
+    <ProjectReference Include="..\MEngineService\MEngineService.csproj" />
   </ItemGroup>
 
 </Project>
