--- a/src_FGEN/MSetGenerator/MSetGenerator.vcxproj
+++ b/src_FGEN/MSetGenerator/MSetGenerator.vcxproj
@@ -47,6 +47,7 @@
     <PlatformToolset>v142</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
     <UseOfMfc>Dynamic</UseOfMfc>
+    <UseInteloneMKL>Sequential</UseInteloneMKL>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
@@ -97,6 +98,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <ModuleDefinitionFile>.\MSetGenerator.def</ModuleDefinitionFile>
+      <AdditionalDependencies>$(OutDir)QPVec.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <Midl>
       <MkTypLibCompatible>false</MkTypLibCompatible>
@@ -183,6 +185,8 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="FGenMath.cpp" />
+    <ClCompile Include="GenPt.cpp" />
     <ClCompile Include="MSetGenerator.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -190,8 +194,10 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="PointInt.cpp" />
     <ClCompile Include="qp.cpp" />
     <ClCompile Include="qpMath.cpp" />
+    <ClCompile Include="qpMathVec.cpp" />
     <ClCompile Include="qpParser.cpp" />
     <ClCompile Include="Test.cpp" />
   </ItemGroup>
@@ -200,11 +206,15 @@
     <None Include="res\MSetGenerator.rc2" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="FGenMath.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="GenPt.h" />
     <ClInclude Include="MSetGenerator.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="PointInt.h" />
     <ClInclude Include="qp.h" />
     <ClInclude Include="qpMath.h" />
+    <ClInclude Include="qpMathVec.h" />
     <ClInclude Include="qpParser.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
