Removed the cdecl export for qpMath

--- a/src_FGEN/MSetGenerator/MSetGenerator.vcxproj
+++ b/src_FGEN/MSetGenerator/MSetGenerator.vcxproj
@@ -47,7 +47,7 @@
     <PlatformToolset>v142</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
     <UseOfMfc>Dynamic</UseOfMfc>
-    <UseInteloneMKL>Sequential</UseInteloneMKL>
+    <UseInteloneMKL>No</UseInteloneMKL>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
