MSetGenerator::Generator::FillCountsVec() is now being called properly and is returning valid count data.

--- a/src_FGEN/MSetGenerator/MSetGenerator.vcxproj
+++ b/src_FGEN/MSetGenerator/MSetGenerator.vcxproj
@@ -202,6 +202,7 @@
     <ClCompile Include="qpMath.cpp" />
     <ClCompile Include="qpMathVec.cpp" />
     <ClCompile Include="qpParser.cpp" />
+    <ClCompile Include="SizeDd.cpp" />
     <ClCompile Include="SizeInt.cpp" />
     <ClCompile Include="Test.cpp" />
     <ClCompile Include="twoProd.cpp" />
@@ -227,6 +228,7 @@
     <ClInclude Include="qpMathVec.h" />
     <ClInclude Include="qpParser.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="SizeDd.h" />
     <ClInclude Include="SizeInt.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="twoProd.h" />
