--- a/src_FGEN/MSetGenerator/MSetGenerator.vcxproj.filters
+++ b/src_FGEN/MSetGenerator/MSetGenerator.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="twoProd.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SizeDd.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="MSetGenerator.def">
@@ -131,6 +134,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="vHelper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SizeDd.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
