The MSetExplorer is now displaying a Mandelbrot Set.

--- a/.gitignore
+++ b/.gitignore
@@ -332,3 +332,5 @@ ASALocalRun/
 
 # Local History for Visual Studio
 .localhistory/
+/src/MSetExplorer/My Advisor Results - MSetExplorer
+/src_FGEN/MEngineService/My Advisor Results - MEngineService
