--- a/src_FGEN/MEngineService/Properties/launchSettings.json
+++ b/src_FGEN/MEngineService/Properties/launchSettings.json
@@ -1,13 +1,13 @@
-﻿{
+{
   "profiles": {
     "MEngineService": {
       "commandName": "Project",
-      "dotnetRunMessages": "true",
-      "launchBrowser": false,
-      "applicationUrl": "http://localhost:5000;https://localhost:5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "dotnetRunMessages": "true",
+      "nativeDebugging": false,
+      "applicationUrl": "http://localhost:5000;https://localhost:5001"
     }
   }
 }
