The MainWindowViewModel is using a MapSectionProvider instead of directly using an MEngineClient.

--- a/src/MEngineClient/MEngineClient.csproj
+++ b/src/MEngineClient/MEngineClient.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MEngineDataContracts\MEngineDataContracts.csproj" />
+    <ProjectReference Include="..\MSS.Common\MSS.Common.csproj" />
   </ItemGroup>
 
 </Project>
