Instead of the MapSectionProvider, now using the WorkQueue. The WorkQueue is now using two threads to generate MapSections.

--- a/src/MEngineClient/MEngineClient.csproj
+++ b/src/MEngineClient/MEngineClient.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MapSectionProviderLib\MapSectionProviderLib.csproj" />
     <ProjectReference Include="..\MEngineDataContracts\MEngineDataContracts.csproj" />
     <ProjectReference Include="..\MSS.Common\MSS.Common.csproj" />
   </ItemGroup>
