Moved the logic for updating the map view from the MapDisplay user control back to the MainWindowViewModel.

--- a/src/ImageBuilder/ImageBuilder.csproj
+++ b/src/ImageBuilder/ImageBuilder.csproj
@@ -12,6 +12,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="MongoDbImporterNotUsed.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="MongoDbImporterNotUsed.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="System.Text.Json" Version="5.0.2" />
   </ItemGroup>
