Moved unused code to BigIntegerHelperOldMethods and RMapHelperOldMethods

--- a/src/MSS.Common/MSS.Common.csproj
+++ b/src/MSS.Common/MSS.Common.csproj
@@ -11,10 +11,12 @@
 
   <ItemGroup>
     <Compile Remove="RMap\JobHelperNotUsed.cs" />
+    <Compile Remove="RMap\RMapHelperOldMethods.cs" />
   </ItemGroup>
 
   <ItemGroup>
     <None Include="RMap\JobHelperNotUsed.cs" />
+    <None Include="RMap\RMapHelperOldMethods.cs" />
   </ItemGroup>
 
   <ItemGroup>
