Moved the ColorBandSetW and ColorBandW classes to the MSS.Types project.

--- a/src/MSS.Types/MSS.Types.csproj
+++ b/src/MSS.Types/MSS.Types.csproj
@@ -7,6 +7,8 @@
 
   <ItemGroup>
     <Compile Remove="BigIntegerExtensions.cs" />
+    <Compile Remove="Color\ColorBand.cs" />
+    <Compile Remove="Color\ColorBandSet.cs" />
   </ItemGroup>
 
   <ItemGroup>
