--- a/src/MSetExplorer/MSetExplorer.csproj
+++ b/src/MSetExplorer/MSetExplorer.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="ColorBand\ColorBandSetW.cs" />
+    <Compile Remove="ColorBand\ColorBandW.cs" />
+    <Compile Remove="ColorBand\IColorBandSetWithPropChanged.cs" />
+    <Compile Remove="ColorBand\IColorBandWithPropChanged.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MEngineClient\MEngineClient.csproj" />
   </ItemGroup>
 
